<resources>
    <string name="app_name">SS Bookstore</string>
    <string name="edit_username">ID</string>
    <string name="edit_password">Password</string>
    <string name="button_login">login</string>
    <string name="add_btn">Add Book</string>
    <string name="button_logout">Logout</string>
    <string name="book_title">Book Title :</string>
    <string name="author">Author :</string>
    <string name="book_description">Description :</string>
    <string name="add_book_title">Create new</string>
    <string name="back_btn">Back</string>
    <string name="done_btn">Done</string>
    <string name="edit_btn">Edit</string>
    <string name="disp_book_title">Book title</string>
    <string name="dialog_title">Error</string>
    <string name="dialog_msg">Book title and author cannot be blank!</string>


    <string-array name="book_list">
        <item> Programming in Java </item>
        <item> ABC for babies </item>
        <item> Textbook </item>
        <item> Programming in C </item>
    </string-array>

    <string-array name="description">
        <item> This is a random description </item>
        <item> This is a random description </item>
        <item> This is a random description </item>
        <item> This is a random description </item>
    </string-array>
</resources>
