<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/custom_action_bar_layout"
    android:background="@color/colorAccent">

    <TableRow>
        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_btn"
            android:padding="14dp"
           />

        <TextView
            android:id="@+id/add_book_title"
            android:layout_gravity="center|center_horizontal|fill_horizontal|center_vertical"
            android:text="@string/add_book_title"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_btn"
            android:padding="14dp"
            />

    </TableRow>

</TableLayout>