<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/custom_action_bar_layout"
    android:background="@color/colorAccent">

    <TableRow>
        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_logout"
            android:padding="14dp"
           />

        <TextView
            android:id="@+id/title"
            android:layout_gravity="center|center_horizontal|fill_horizontal|center_vertical"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical|end"
            android:src="@drawable/ic_add_circle_white"
            android:title="@string/add_btn"
            android:padding="14dp"/>


    </TableRow>

</TableLayout>