<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetails">

    <include
        android:id="@+id/include"
        layout="@layout/bookdetails_action_bar_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="150dp"
        android:orientation="vertical"/>

    <ImageButton
        android:id="@+id/btnImage"
        android:layout_width="191dp"
        android:layout_height="236dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/etBookTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/ic_simplebook" />

    <TextView
        android:id="@+id/lblBook_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:padding="10dp"
        android:text="@string/book_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lblAuthor"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/btnImage" />

    <TextView
        android:id="@+id/lblAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/lblBook_Title"
        app:layout_constraintBottom_toTopOf="@id/lblDesc"
        />

    <TextView
        android:id="@+id/lblDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:text="@string/book_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/lblAuthor"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/etBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@id/etAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/btnImage" />

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etDesc"
        app:layout_constraintTop_toBottomOf="@id/etBookTitle" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAuthor"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>